--- a/www/dtp/Config.php.example
+++ b/www/dtp/Config.php.example
@@ -7,4 +7,9 @@ class Config {
   const OWNER_ID = '';
   const CLIENT_SECRET = '';
   const ACCESS_TOKEN = '';
+
+  const DB_HOST = '';
+  const DB_NAME = '';
+  const DB_USER = '';
+  const DB_PASSWORD = '';
 }
